<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="20dp"
    tools:context=".ReportActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineSpotShadowColor="@color/black"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_q_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_question_1"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rb_answer1_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_1" />

                    <RadioButton
                        android:id="@+id/rb_answer1_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_2" />

                    <RadioButton
                        android:id="@+id/rb_answer1_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_3" />

                    <RadioButton
                        android:id="@+id/rb_answer1_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_4" />

                    <RadioButton
                        android:id="@+id/rb_answer1_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_5" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_2"
            app:layout_constraintTop_toBottomOf="@id/cv_1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:outlineSpotShadowColor="@color/black"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_q_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_question_2"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rb_answer2_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_1" />

                    <RadioButton
                        android:id="@+id/rb_answer2_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_2" />

                    <RadioButton
                        android:id="@+id/rb_answer2_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_3" />

                    <RadioButton
                        android:id="@+id/rb_answer2_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_4" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_3"
            app:layout_constraintTop_toBottomOf="@id/cv_2"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:outlineSpotShadowColor="@color/black"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_q_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_question_3"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rb_answer3_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_1" />

                    <RadioButton
                        android:id="@+id/rb_answer3_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_2" />

                    <RadioButton
                        android:id="@+id/rb_answer3_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_3" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_4"
            app:layout_constraintTop_toBottomOf="@id/cv_3"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:outlineSpotShadowColor="@color/black"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_q_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_question_4"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rb_answer4_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4_1" />

                    <RadioButton
                        android:id="@+id/rb_answer4_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4_2" />
                    <RadioButton
                        android:id="@+id/rb_answer4_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4_3" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_5"
            app:layout_constraintTop_toBottomOf="@id/cv_4"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:outlineSpotShadowColor="@color/black"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_q_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_question_5"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rb_answer5_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_1" />

                    <RadioButton
                        android:id="@+id/rb_answer5_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_2" />
                    <RadioButton
                        android:id="@+id/rb_answer5_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_3" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_6"
            app:layout_constraintTop_toBottomOf="@id/cv_5"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:outlineSpotShadowColor="@color/black"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_q_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_question_6"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rb_answer6_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer6_1" />

                    <RadioButton
                        android:id="@+id/rb_answer6_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer6_2" />
                    <RadioButton
                        android:id="@+id/rb_answer6_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer6_3" />
                    <RadioButton
                        android:id="@+id/rb_answer6_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer6_4" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_7"
            app:layout_constraintTop_toBottomOf="@id/cv_6"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            android:outlineSpotShadowColor="@color/black"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/main_q_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_question_7"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/rb_answer7_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer7_1" />

                    <RadioButton
                        android:id="@+id/rb_answer7_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer7_2" />
                    <RadioButton
                        android:id="@+id/rb_answer7_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer7_3" />
                    <RadioButton
                        android:id="@+id/rb_answer7_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer7_4" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:fontFamily="@font/roboto_bold"
            android:text="Submit"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cv_7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>